Intro SoftRefLRUPolicyMSPerMB + ReservedCodeCacheSize args (#983)
Learnings from https://www.jasonpearson.dev/codecache-in-jvm-builds/ and
https://www.jasonpearson.dev/softreflrupolicymspermb-in-jvm-builds/

<!--
  ⬆ Put your description above this! ⬆

  Please be descriptive and detailed.
  
Please read our [Contributing
Guidelines](https://github.com/tinyspeck/slack-gradle-plugin/blob/main/.github/CONTRIBUTING.md)
and [Code of Conduct](https://slackhq.github.io/code-of-conduct).

Don't worry about deleting this, it's not visible in the PR!
-->